--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,27 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 test {
     useJUnitPlatform()
+}
+
+dependencies {
+    testImplementation 'org.testng:testng:7.1.0'
+
+}
+
+test {
+    useTestNG()
+}
+
+dependencies {
+    testImplementation 'junit:junit:4.13'
+}
+
+test {
+    useJUnit()
 }
